@@ -14,6 +14,14 @@ void OnStart()
 
   nvPortfolioManager man;
 
+  // Initial start time:
+  datetime time = D'2015.01.01 00:00';
+
+  // Note that we must update the portfolio initial time **before**
+  // adding the currency traders, otherwise, the first weight updated message
+  // timetag could be largely different from the subsequent values.
+  man.setCurrentTime(time);
+
   // Add some currency traders:
   int nsym = 4;
   string symbols[] = {"GBPJPY", "EURUSD", "EURJPY", "USDCHF"};
@@ -25,12 +33,10 @@ void OnStart()
     ct.setMarketType(MARKET_TYPE_VIRTUAL);
   }
 
-  // Initial start time:
-  datetime time = D'2015.01.01 00:00';
-
   int numDays = 31;
   int nsecs = 86400*numDays;
   for(int i=0;i<nsecs;++i) {
+    logDEBUG("Elapsed time: "<<i);
     man.update(time+i);
   }
 
