@@ -40,7 +40,7 @@ describe("MT5Control behavior", function()
     local tt = {
       mtype = enums.MSGTYPE_BALANCE_UPDATED,
       marketType = enums.MARKET_REAL,
-      time = { year=2015, month=3, day=19, hours=12, mins=1, secs=2, msecs=345},
+      time = { year=2015, month=3, day=19, hour=12, min=1, sec=2, msec=345},
       value = 3000.23,
     }
 
@@ -55,12 +55,12 @@ describe("MT5Control behavior", function()
     local tt = {
       mtype = enums.MSGTYPE_TRADER_WEIGHT_UPDATED,
       symbol = "EURUSD",
-      time = { year=2015, month=3, day=19, hours=12, mins=1, secs=2, msecs=345},
+      time = { year=2015, month=3, day=19, hour=12, min=1, sec=2, msec=345},
       value = 0.123,
     }
 
     -- check the length of that message:
-    local len = 2+10+8
+    local len = 2+10+8+9
 
     testMessageParsing(tt,len);
   end)  
